verify versions script

--- a/packages/eyes-common/package.json
+++ b/packages/eyes-common/package.json
@@ -43,6 +43,7 @@
   },
   "scripts": {
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
+    "vv": "node ../../scripts/verify-versions.js",
     "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\"",
     "postpublish": "git push; git push --tags"
