--- a/packages/eyes-webdriverio-5-service/package.json
+++ b/packages/eyes-webdriverio-5-service/package.json
@@ -33,6 +33,7 @@
     "wdio-chromedriver-service": "^5.0.2"
   },
   "scripts": {
+    "vv": "node ../../scripts/verify-versions.js",
     "test": "wdio tests/wdio.conf.js",
     "postpublish": "git push; git push --tags"
   },
