--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "eslint-plugin-mocha-no-only": "^1.1.0",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "js-yaml": "^3.13.1",
     "prettier": "^1.18.2",
-    "js-yaml": "^3.13.1"
+    "yargs": "^15.1.0"
   }
 }
