--- a/packages/dom-utils/package.json
+++ b/packages/dom-utils/package.json
@@ -25,7 +25,7 @@
   "main": "./index.js",
   "dependencies": {
     "@applitools/dom-capture": "^7.0.22",
-    "@applitools/eyes-common": "^3.18.3",
+    "@applitools/eyes-common": "3.18.3",
     "axios": "^0.19.0"
   },
   "devDependencies": {
@@ -35,6 +35,7 @@
   },
   "scripts": {
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
+    "vv": "node ../../scripts/verify-versions.js",
     "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
     "postpublish": "git push; git push --tags"
   },
