--- a/packages/eyes-webdriverio-4-service/package.json
+++ b/packages/eyes-webdriverio-4-service/package.json
@@ -7,6 +7,7 @@
   ],
   "main": "index.js",
   "scripts": {
+    "vv": "node ../../scripts/verify-versions.js",
     "test": "wdio test/wdio.conf.js",
     "postpublish": "git push; git push --tags"
   },
