--- a/packages/eyes-webdriverio-4/package.json
+++ b/packages/eyes-webdriverio-4/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint '**/*.js'",
+    "vv": "node ../../scripts/verify-versions.js",
     "test": "yarn test:unit && yarn test:e2e",
     "test:e2e": "mocha --no-timeouts \"test/+(TestClassicApi*.js|TestFluentApi*.js|TestVisualGrid*.js)\"",
     "test:it": "mocha --no-timeouts \"test/it/*.js\"",
@@ -16,9 +17,9 @@
   "repository": "https://github.com/applitools/eyes.sdk.javascript1",
   "dependencies": {
     "@applitools/dom-utils": "4.7.4",
-    "@applitools/eyes-common": "3.18.2",
-    "@applitools/eyes-sdk-core": "6.0.9",
-    "@applitools/visual-grid-client": "13.5.12",
+    "@applitools/eyes-common": "3.18.3",
+    "@applitools/eyes-sdk-core": "6.0.10",
+    "@applitools/visual-grid-client": "13.5.15",
     "css": "2.2.4",
     "css-url-parser": "^1.1.3",
     "is-absolute-url": "^2.1.0",
