add dom-capture to workspaces

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "private": true,
   "workspaces": [
+    "packages/dom-capture",
     "packages/dom-utils",
     "packages/eyes-common",
     "packages/eyes-images",
