--- a/packages/dom-capture/package.json
+++ b/packages/dom-capture/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "vv": "node ../../scripts/verify-versions.js",
     "test:mocha": "mocha --no-timeouts tests/**/*.test.js",
     "eslint:node": "eslint '**/*.js' --ignore-pattern 'src/browser'",
     "eslint:browser": "eslint -c 'src/browser/.eslintrc.json' 'src/browser/**/*.js'",
