all packages: verify versions before publishing

--- a/packages/dom-capture/package.json
+++ b/packages/dom-capture/package.json
@@ -12,7 +12,8 @@
     "test": "npm run eslint && npm run test:mocha",
     "build": "rollup -c rollup.config.js",
     "build:watch": "rollup -c rollup.config.js --watch",
-    "surge": "surge tests/fixtures applitools-dom-capture-origin-1.surge.sh && surge tests/fixtures applitools-dom-capture-origin-2.surge.sh"
+    "surge": "surge tests/fixtures applitools-dom-capture-origin-1.surge.sh && surge tests/fixtures applitools-dom-capture-origin-2.surge.sh",
+    "prepublishOnly": "yarn vv"
   },
   "engines": {
     "node": ">=8.0.0"
