--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -69,7 +69,8 @@
     "test:coverage:nuke": "coverage-tests nuke",
     "test:coverage:doctor": "coverage-tests doctor",
     "test:coverage:custom": "mocha --no-timeouts \"test/coverage/custom/*.spec.js\"",
-    "postpublish": "git push; git push --tags"
+    "postpublish": "git push; git push --tags",
+    "prepublishOnly": "yarn vv"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
