--- a/packages/eyes-common/package.json
+++ b/packages/eyes-common/package.json
@@ -46,7 +46,8 @@
     "vv": "node ../../scripts/verify-versions.js",
     "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\"",
-    "postpublish": "git push; git push --tags"
+    "postpublish": "git push; git push --tags",
+    "prepublishOnly": "yarn vv"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
