--- a/packages/eyes-images/package.json
+++ b/packages/eyes-images/package.json
@@ -42,7 +42,8 @@
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "vv": "node ../../scripts/verify-versions.js",
     "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
-    "postpublish": "git push; git push --tags"
+    "postpublish": "git push; git push --tags",
+    "prepublishOnly": "yarn vv"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
