--- a/packages/eyes-protractor/package.json
+++ b/packages/eyes-protractor/package.json
@@ -45,7 +45,7 @@
     "test": "protractor test/protractor.conf.js",
     "test:it": "protractor test/protractor.conf.js",
     "postpublish": "git push; git push --tags",
-    "prepublishOnly": "yarn vv"
+    "preversion": "yarn vv"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
