--- a/packages/eyes-webdriverio-4-service/package.json
+++ b/packages/eyes-webdriverio-4-service/package.json
@@ -10,7 +10,7 @@
     "vv": "node ../../scripts/verify-versions.js",
     "test": "wdio test/wdio.conf.js",
     "postpublish": "git push; git push --tags",
-    "prepublishOnly": "yarn vv"
+    "preversion": "yarn vv"
   },
   "author": "",
   "license": "SEE LICENSE IN LICENSE",
