--- a/packages/eyes-selenium-3/package.json
+++ b/packages/eyes-selenium-3/package.json
@@ -24,10 +24,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/applitools/eyes.sdk.javascript.git"
+    "url": "git://github.com/applitools/eyes.sdk.javascript1.git"
   },
   "bugs": {
-    "url": "https://github.com/applitools/eyes.sdk.javascript/issues"
+    "url": "https://github.com/applitools/eyes.sdk.javascript1/issues"
   },
   "directories": {
     "example": "./example",
