--- a/packages/eyes-sdk-core/package.json
+++ b/packages/eyes-sdk-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/eyes-sdk-core",
-  "version": "6.0.11",
+  "version": "6.0.11-beta.1",
   "description": "The core components of Eyes JavaScript SDK",
   "keywords": [
     "applitools",
