--- a/packages/eyes-selenium-3/package.json
+++ b/packages/eyes-selenium-3/package.json
@@ -49,7 +49,9 @@
   },
   "devDependencies": {
     "@types/node": "*",
-    "chromedriver": "^78.0.0",
+    "chromedriver": "^80.0.0",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "mocha": "^6.2.2",
     "protractor": "^5.4.2",
     "selenium-webdriver": "^3.6.0",
@@ -65,6 +67,7 @@
     "test:appium": "mocha --no-timeouts \"test/e2e/appium/**/*.js\"",
     "test:selenium": "mocha --no-timeouts \"test/e2e/selenium/**/*.js\"",
     "test:protractor": "protractor test/e2e/protractor/protractor.conf.js",
+    "test:coverage:custom": "mocha --no-timeouts \"test/coverage/custom/*.spec.js\"",
     "typings": "tsc --declaration",
     "postpublish": "git push; git push --tags",
     "preversion": "yarn vv",
