--- a/packages/eyes-cypress/package.json
+++ b/packages/eyes-cypress/package.json
@@ -37,7 +37,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/applitools/eyes-cypress"
+    "url": "git://github.com/applitools/eyes.sdk.javascript1.git"
   },
   "dependencies": {
     "@applitools/dom-snapshot": "3.2.3",
