--- a/packages/eyes-leanft/package.json
+++ b/packages/eyes-leanft/package.json
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/applitools/eyes.leanft.javascript.git"
+    "url": "git://github.com/applitools/eyes.sdk.javascript1.git"
   },
   "bugs": {
     "url": "https://github.com/applitools/eyes.leanft.javascript/issues"
