--- a/packages/eyes-cypress/package.json
+++ b/packages/eyes-cypress/package.json
@@ -12,17 +12,19 @@
     "test:unit": "mocha --no-timeouts 'tests/unit/**/*.test.js'",
     "test:it": "mocha --no-timeouts 'tests/it/**/*.test.js'",
     "test:e2e": "mocha --no-timeouts 'tests/e2e/**/*.test.js'",
-    "eslint": "eslint '**/*.js'",
-    "test": "npm run test:mocha && npm run eslint && npm run msg:success || npm run msg:failure",
+    "lint": "eslint '**/*.js'",
+    "test": "yarn test:mocha && yarn lint && yarn msg:success || yarn msg:failure",
     "msg:success": "notify -t 'Cypress tests Passed !!' -m 'Yaaaaaa !!!'",
     "msg:failure": "notify -t 'Cypress tests Failed !!' -m 'Daaaamm !!!'",
     "cypress": "cd tests/fixtures/testApp && cypress open --config integrationFolder=cypress/integration-play,pluginsFile=cypress/plugins/index-play.js,supportFile=cypress/support/index-run.js",
     "cypress:run": "cd tests/fixtures/testApp && cypress run --config integrationFolder=cypress/integration-run,pluginsFile=cypress/plugins/index-run.js,supportFile=cypress/support/index-run.js",
     "cypress:play": "cd tests/fixtures/testApp && cypress run --config integrationFolder=cypress/integration-play,pluginsFile=cypress/plugins/index-play.js,supportFile=cypress/support/index-run.js --spec=cypress/integration-play/play.js",
-    "prepublishOnly": "npm version patch",
     "changelog": "git changelog -x -p -f v$npm_package_version > History.md && git add ./History.md && git commit -am 'changelog'",
     "changelog:init": "git config changelog.format \"* %s [[%h]($(echo $npm_package_repository_url|cut -d+ -f2|cut -d. -f1-2)/commit/%H)]\"",
-    "changelog:install": "sudo apt-get install git-extras"
+    "changelog:install": "sudo apt-get install git-extras",
+    "vv": "node ../../scripts/verify-versions.js",
+    "postpublish": "git push; git push --tags",
+    "preversion": "yarn vv"
   },
   "files": [
     "src",
@@ -56,7 +58,7 @@
     "chai-spies": "^1.0.0",
     "cookie-parser": "^1.4.4",
     "cypress": "^3.8.3",
-    "eslint": "^5.16.0",
+    "eslint": "^6.8.0",
     "eslint-plugin-mocha-no-only": "^1.1.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-prettier": "^2.7.0",
