--- a/packages/eyes-leanft/package.json
+++ b/packages/eyes-leanft/package.json
@@ -63,7 +63,10 @@
     "test": "mocha ./test/**/*.js",
     "build": "webpack",
     "minify": "uglifyjs -c -m reserved=[module.exports] --warn bundle.js -o bundle.js",
-    "prepublishOnly": "npm run build && npm run minify"
+    "prepublishOnly": "npm run build && npm run minify",
+    "postpublish": "git push; git push --tags",
+    "preversion": "yarn vv",
+    "vv": "node ../../scripts/verify-versions.js"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
