--- a/packages/eyes-storybook/.eslintrc.json
+++ b/packages/eyes-storybook/.eslintrc.json
@@ -18,6 +18,7 @@
         "prettier/prettier": [
             "error",
             {
+                "semi": true,
                 "parser": "babel",
                 "printWidth": 100,
                 "singleQuote": true,
