--- a/packages/eyes-storybook/package.json
+++ b/packages/eyes-storybook/package.json
@@ -15,7 +15,7 @@
     "eyes-storybook": "./bin/eyes-storybook.js"
   },
   "scripts": {
-    "test": "npm run build && npm run test:mocha && npm run eslint && npm run msg:success || npm run msg:failure",
+    "test": "yarn build && yarn test:mocha && yarn lint && yarn msg:success || yarn msg:failure",
     "test:mocha": "mocha --no-timeouts --trace-warnings 'test/unit/*.test.js' 'test/it/*.test.js' 'test/e2e/*.test.js'",
     "test:unit": "mocha --no-timeouts --trace-warnings 'test/unit/*.test.js'",
     "test:it": "mocha --no-timeouts --trace-warnings 'test/it/*.test.js'",
@@ -24,8 +24,7 @@
     "msg:failure": "notify -t 'Storybook tests Failed !!' -m 'Daaaamm !!!'",
     "build": "rollup -c rollup.config.js",
     "build:heavy": "node scripts/bitmap.js",
-    "eslint": "eslint '**/*.js'",
-    "prepublishOnly": "npm version patch",
+    "lint": "eslint '**/*.js'",
     "storybook": "start-storybook -c test/fixtures/appWithStorybook -p 9001 -s test/fixtures",
     "storybook:heavy": "start-storybook -c test/fixtures/heavyStorybook -p 9002 -s test/fixtures",
     "eyes-storybook": "node bin/eyes-storybook.js -f test/fixtures/applitools.config.js",
@@ -34,7 +33,10 @@
     "changelog": "git changelog -x -p -f v$npm_package_version > History.md && git add ./History.md && git commit -am 'changelog'",
     "changelog:init": "git config changelog.format \"* %s [[%h]($(echo $npm_package_repository_url|cut -d+ -f2|cut -d. -f1-2)/commit/%H)]\"",
     "changelog:install": "sudo apt-get install git-extras",
-    "postinstall": "node src/postinstall"
+    "postinstall": "node src/postinstall",
+    "postpublish": "git push; git push --tags",
+    "preversion": "yarn vv",
+    "vv": "node ../../scripts/verify-versions.js"
   },
   "keywords": [
     "applitools",
