--- a/packages/dom-utils/package.json
+++ b/packages/dom-utils/package.json
@@ -24,7 +24,7 @@
   },
   "main": "./index.js",
   "dependencies": {
-    "@applitools/dom-capture": "^7.0.22",
+    "@applitools/dom-capture": "7.1.3",
     "@applitools/eyes-common": "3.18.4",
     "axios": "^0.19.0"
   },
