vgc: fixed beta versions

--- a/packages/visual-grid-client/package.json
+++ b/packages/visual-grid-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/visual-grid-client",
-  "version": "13.5.16-beta.7",
+  "version": "13.5.16",
   "description": "",
   "keywords": [
     "applitools",
@@ -32,8 +32,8 @@
   ],
   "dependencies": {
     "@applitools/dom-snapshot": "3.2.3",
-    "@applitools/eyes-common": "3.18.4-beta.1",
-    "@applitools/eyes-sdk-core": "6.0.11-beta.7",
+    "@applitools/eyes-common": "3.18.4",
+    "@applitools/eyes-sdk-core": "6.0.11",
     "@applitools/functional-commons": "1.5.4",
     "@applitools/http-commons": "2.3.12",
     "@applitools/isomorphic-fetch": "3.0.0",
