--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -52,7 +52,8 @@
     "mocha": "^6.2.2",
     "mocha-parallel-tests": "^2.2.2",
     "node-fetch": "^2.6.0",
-    "selenium-webdriver": "^4.0.0-alpha.5"
+    "selenium-webdriver": "^4.0.0-alpha.5",
+    "@applitools/sdk-release-kit": "0.1.0"
   },
   "peerDependencies": {
     "selenium-webdriver": "^4.0.0-alpha.5"
@@ -60,8 +61,8 @@
   "scripts": {
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "vv": "node ../../scripts/verify-versions.js",
-    "vc": "node ../../scripts/verify-changelog.js",
-    "uc": "node ../../scripts/update-changelog.js",
+    "vc": "bongo --verify-changelog",
+    "uc": "bongo --update-changelog",
     "send-release-notification": "node ../../scripts/send-release-notification.js",
     "test": "yarn test:unit && yarn test:it",
     "render": "node scripts/render.js",
