--- a/packages/sdk-release-kit/package.json
+++ b/packages/sdk-release-kit/package.json
@@ -5,6 +5,13 @@
   "engines": {
     "node": ">=10.0.0"
   },
+  "directories": {
+    "lib": "./src",
+    "test": "./test"
+  },
+  "bin": {
+    "bongo": "./src/cli/index.js"
+  },
   "description": "Release Kit for Applitools SDKs",
   "author": "David Haeffner <dhaeffner@gmail.com>",
   "homepage": "https://github.com/applitools/eyes.sdk.javascript1#readme",
@@ -18,6 +25,9 @@
   },
   "bugs": {
     "url": "https://github.com/applitools/eyes.sdk.javascript1/issues"
+  },
+  "dependencies": {
+    "yargs": "^15.0.2"
   },
   "devDependencies": {
     "mocha": "^6.2.2"
