--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/eyes-selenium",
-  "version": "4.33.17",
+  "version": "4.33.20",
   "description": "Applitools Eyes SDK for Selenium WebDriver",
   "keywords": [
     "eyes-selenium",
@@ -38,11 +38,12 @@
   "dependencies": {
     "@applitools/dom-utils": "4.7.6",
     "@applitools/eyes-common": "3.18.5",
-    "@applitools/eyes-sdk-core": "7.0.0",
+    "@applitools/eyes-sdk-core": "8.0.0",
     "@applitools/visual-grid-client": "13.5.19"
   },
   "devDependencies": {
     "@applitools/sdk-fake-eyes-server": "1.0.5",
+    "@applitools/sdk-release-kit": "0.1.0",
     "@applitools/sdk-test-kit": "^1.0.14",
     "assert-rejects": "^1.0.0",
     "axios": "^0.19.0",
@@ -52,8 +53,7 @@
     "mocha": "^6.2.2",
     "mocha-parallel-tests": "^2.2.2",
     "node-fetch": "^2.6.0",
-    "selenium-webdriver": "^4.0.0-alpha.5",
-    "@applitools/sdk-release-kit": "0.1.0"
+    "selenium-webdriver": "^4.0.0-alpha.5"
   },
   "peerDependencies": {
     "selenium-webdriver": "^4.0.0-alpha.5"
