--- a/packages/side-eyes/package.json
+++ b/packages/side-eyes/package.json
@@ -4,7 +4,7 @@
   "repository": "git@github.com:applitools/applitools-for-selenium-ide.git",
   "private": true,
   "scripts": {
-    "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
+    "lint": "eslint webpack.config.babel.js src/ --ext .js --ext .jsx",
     "vv": "node ../../scripts/verify-versions.js",
     "start": "webpack-dev-server --hot",
     "build": "yarn build:page && webpack",
@@ -21,7 +21,6 @@
     "test:code-export:python:vg": "node tests/e2e/code-export/run-tests.js python-pytest true",
     "test:code-export:ruby": "node tests/e2e/code-export/run-tests.js ruby-rspec",
     "test:code-export:ruby:vg": "node tests/e2e/code-export/run-tests.js ruby-rspec true",
-    "lint": "eslint webpack.config.babel.js src/ --ext .js --ext .jsx",
     "postinstall": "patch-package",
     "version": "node scripts/version.js && git add src/manifest.json",
     "upgrade:sdks": "node scripts/update-sdks.js",
@@ -84,10 +83,10 @@
     "webpack-dev-server": "^2.8.2"
   },
   "dependencies": {
-    "@applitools/dom-capture": "^7.0.17",
+    "@applitools/dom-capture": "7.1.3",
     "@applitools/dom-snapshot": "^3.0.5",
-    "@applitools/eyes-images": "^4.12.15",
-    "@applitools/visual-grid-client": "^13.0.1",
+    "@applitools/eyes-images": "4.12.37",
+    "@applitools/visual-grid-client": "13.5.19",
     "buffer": "^5.2.1",
     "classnames": "^2.2.5",
     "fuse.js": "^3.3.0",
