--- a/packages/eyes-images-legacy/package.json
+++ b/packages/eyes-images-legacy/package.json
@@ -44,6 +44,7 @@
     "eyes.utils": "^3.8.1"
   },
   "devDependencies": {
+    "@applitools/sdk-release-kit": "0.1.0",
     "@types/node": "*",
     "browserify": "^16.5.0",
     "browserify-fs": "^1.0.0",
@@ -54,6 +55,9 @@
     "uglify-js": "^3.6.5"
   },
   "scripts": {
+    "vv": "node ../../scripts/verify-versions.js",
+    "vc": "bongo --verify-changelog",
+    "uc": "bongo --update-changelog",
     "test": "npm run test:e2e",
     "test:e2e": "node test/simplerun.js",
     "build": "npm run browserify && npm run uglify",
@@ -61,8 +65,8 @@
     "uglify": "uglifyjs dist/eyes-browser.js > dist/eyes-browser.min.js",
     "typings": "tsc --declaration",
     "postpublish": "git push; git push --tags",
-    "preversion": "yarn vv",
-    "vv": "node ../../scripts/verify-versions.js"
+    "preversion": "yarn vv && yarn vc",
+    "version": "yarn uc && git add CHANGELOG.md"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
