--- a/packages/dom-utils/package.json
+++ b/packages/dom-utils/package.json
@@ -29,16 +29,20 @@
     "axios": "^0.19.0"
   },
   "devDependencies": {
+    "@applitools/sdk-release-kit": "0.1.0",
     "chromedriver": "^80.0.0",
     "mocha": "^6.2.2",
     "selenium-webdriver": "^4.0.0-alpha.5"
   },
   "scripts": {
+    "vc": "bongo --verify-changelog",
+    "uc": "bongo --update-changelog",
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "vv": "node ../../scripts/verify-versions.js",
     "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
     "postpublish": "git push; git push --tags",
-    "preversion": "yarn vv"
+    "preversion": "yarn vv && yarn vc",
+    "version": "yarn uc && git add CHANGELOG.md"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
