--- a/packages/eyes-webdriverio-5-service/package.json
+++ b/packages/eyes-webdriverio-5-service/package.json
@@ -23,6 +23,7 @@
     "@applitools/eyes-webdriverio": "5.9.12"
   },
   "devDependencies": {
+    "@applitools/sdk-release-kit": "0.1.0",
     "@wdio/cli": "^5.18.6",
     "@wdio/dot-reporter": "^5.18.6",
     "@wdio/local-runner": "^5.18.6",
@@ -34,9 +35,12 @@
   },
   "scripts": {
     "vv": "node ../../scripts/verify-versions.js",
+    "vc": "bongo --verify-changelog",
+    "uc": "bongo --update-changelog",
     "test": "wdio tests/wdio.conf.js",
     "postpublish": "git push; git push --tags",
-    "preversion": "yarn vv"
+    "preversion": "yarn vv && yarn vc",
+    "version": "yarn uc && git add CHANGELOG.md"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
