--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -40,6 +40,7 @@
     "webdriverio": "^5.18.6"
   },
   "devDependencies": {
+    "@applitools/sdk-release-kit": "0.1.0",
     "@applitools/sdk-fake-eyes-server": "1.0.5",
     "@applitools/sdk-test-kit": "^1.0.17",
     "chromedriver": "^80.0.0",
@@ -50,8 +51,10 @@
     "shared-examples-for": "^0.1.3"
   },
   "scripts": {
-    "lint": "eslint '**/*.js'",
     "vv": "node ../../scripts/verify-versions.js",
+    "vc": "bongo --verify-changelog",
+    "uc": "bongo --update-changelog",
+    "lint": "eslint '**/*.js'",
     "test": "yarn test:unit && yarn test:e2e",
     "test:e2e": "mocha --no-timeouts \"test/+(TestClassicApi*.js|TestFluentApi*.js|TestVisualGrid*.js)\"",
     "test:it": "mocha --no-timeouts \"test/it/*.js\"",
@@ -60,7 +63,8 @@
     "test:coverage:nuke": "coverage-tests nuke",
     "render": "node scripts/render.js",
     "postpublish": "git push; git push --tags",
-    "preversion": "yarn vv"
+    "preversion": "yarn vv && yarn vc",
+    "version": "yarn uc && git add CHANGELOG.md"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
