--- a/packages/sdk-fake-eyes-server/package.json
+++ b/packages/sdk-fake-eyes-server/package.json
@@ -24,12 +24,15 @@
     "url": "git+https://github.com/applitools/eyes.sdk.javascript1.git"
   },
   "scripts": {
+    "vv": "node ../../scripts/verify-versions.js",
+    "vc": "bongo --verify-changelog",
+    "uc": "bongo --update-changelog",
     "start": "node ./scripts/run-fake-eyes-server.js",
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
-    "vv": "node ../../scripts/verify-versions.js",
     "test": "mocha --no-timeouts \"test/**/*.test.js\"",
     "postpublish": "git push; git push --tags",
-    "preversion": "yarn vv"
+    "preversion": "yarn vv && yarn vc",
+    "version": "yarn uc && git add CHANGELOG.md"
   },
   "bugs": {
     "url": "https://github.com/applitools/eyes.sdk.javascript1/issues"
@@ -42,6 +45,7 @@
     "uuid": "^3.3.3"
   },
   "devDependencies": {
+    "@applitools/sdk-release-kit": "0.1.0",
     "chai": "^4.2.0",
     "mocha": "^7.0.0"
   }
