--- a/packages/side-eyes/package.json
+++ b/packages/side-eyes/package.json
@@ -4,8 +4,10 @@
   "repository": "git@github.com:applitools/applitools-for-selenium-ide.git",
   "private": true,
   "scripts": {
-    "lint": "eslint webpack.config.babel.js src/ --ext .js --ext .jsx",
     "vv": "node ../../scripts/verify-versions.js",
+    "vc": "bongo --verify-changelog",
+    "uc": "bongo --update-changelog",
+    "lint": "eslint webpack.config.babel.js src/ --ext .js --ext .jsx",
     "start": "webpack-dev-server --hot",
     "build": "yarn build:page && webpack",
     "build:prod": "rm -rf build && env NODE_ENV=production yarn build",
@@ -22,11 +24,12 @@
     "test:code-export:ruby": "node tests/e2e/code-export/run-tests.js ruby-rspec",
     "test:code-export:ruby:vg": "node tests/e2e/code-export/run-tests.js ruby-rspec true",
     "postinstall": "patch-package",
-    "version": "node scripts/version.js && git add src/manifest.json",
     "upgrade:sdks": "node scripts/update-sdks.js",
     "release": "(./scripts/deploy.js && node scripts/gh-release.js && yarn release:amo && yarn release:cws);exit 0;",
     "release:amo": "cd build && web-ext-submit",
-    "release:cws": "cd build && webstore upload --auto-publish"
+    "release:cws": "cd build && webstore upload --auto-publish",
+    "preversion": "yarn vv && yarn vc",
+    "version": "node scripts/version.js && git add src/manifest.json && yarn uc && git add CHANGELOG.md"
   },
   "jest": {
     "moduleNameMapper": {
@@ -39,6 +42,7 @@
     "testURL": "http://localhost"
   },
   "devDependencies": {
+    "@applitools/sdk-release-kit": "0.1.0",
     "@babel/core": "^7.6.2",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
