--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -60,7 +60,7 @@
   },
   "scripts": {
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
-    "vv": "node ../../scripts/verify-versions.js",
+    "vv": "bongo --verify-versions",
     "vc": "bongo --verify-changelog",
     "uc": "bongo --update-changelog",
     "send-release-notification": "bongo --send-release-notification",
